-improved formatting -new class -add some icons - centered search field added appropriate icons and container w/border -adjusted font colors and borders on page -adjusted placement of various elements -centered search class -fixed #top alignment -changed positions #top -added buffer so page can stretch

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,10 +1,12 @@
 body {
-font-size: 14px; }
-
-
+font-size: 14px;
+height:100vh;
+}
 #top { 
 padding: 20px;
 display:block;
+max-height 50vh;
+color:#222;
 }
 
 a:link, a:visited {
@@ -18,44 +20,108 @@ text-decoration: underline;
 color:black; }
 a:active { text-decoration:none;
 color:black;}
+
+.container {
+display: flex;
+flex-wrap:wrap;
+}
+
 .top-left {
-text-align:left;
-position: fixed;
+position:absolute;
+top: 10px;
+left: 20px
 }
 
 .top-right {
-text-align:right;
-position: relative;
-top: 0px;
+position: absolute;
+top: 10px;
+right: 15px;
 margin-right: 15px;
 }
 .glogo {
 
-margin:auto;
+margin: 20px;
 }
 .center {
-display:block;
-margin-left:auto;
-margin-right:auto;
-width 50%;
-}
-#bottom {
+display:flex;
+flex-wrap:wrap;
+flex-direction:column;
+justify-content:center;
+align-items:center;
 
+}
+
+.search {
+display:flex;
+border-radius: 25px;
+border: 2px solid #D3D3D3;
+justify-content:center;
+align-items:center;
+padding: 0px 100px 0px 100px;
+}
+.searchbar {
+min-width:50%;
+max-width:75%;
+height:20px;
+border:none;
+margin: 10px 45px 10px 45px;
+}
+
+button {
+
+margin: 25px 15px 10px 15px;;
+background-color:white;
+border:none;
+padding: 5px 20px 5px 20px;
+}
+button:hover {
+border:1px solid #D3D3D3;
+color:#222;
+}
+
+
+.bottom {
+position:relative
+bottom: 0;;
 opacity:.6;
+text-align:bottom;
+
+
+}
+
+.buffer {
+
+min-height:25vh;
+max-height:55vh;
 }
 
 .b-left {
-text-align:left;
-position:fixed;
+
+
 margin-left:15px;
+
 }
 
 .b-center {
-text-align:center;
+align-items:flex-start;
+
+
+}
+
+.clear {
+height:24px;
+opacity:.7;
+
+}
+
+.searchicon {
+height:24px;
+opacity:.7;
 }
 .b-right {
-text-align:right;
-bottom: 0px;
+
+
 margin-right: 15px;
+align-items:flex-end;
 }
 
